<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <include
        android:id="@+id/main_bar"
        layout="@layout/app_bar" />

    <TextView
        android:id="@+id/date_trip"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/search"
        android:layout_alignStart="@+id/search"
        android:layout_below="@+id/choice_trip"
        android:layout_marginTop="15dp"
        android:background="@drawable/shapetext"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/num_user"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/search"
        android:layout_alignRight="@+id/search"
        android:layout_below="@+id/choice_trip"
        android:layout_marginTop="15dp"
        android:background="@drawable/shapetext"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/num_human"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/info_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/num_user"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/data_trip"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/choice_trip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="204dp"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/type_trip"
        android:textColor="@android:color/black"
        android:textSize="20sp" />


    <Button
        android:id="@+id/search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/shape_button"
        android:text="Search"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/choice_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/main_bar"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="30dp"
        android:paddingTop="10dp"
        android:text="@string/madina"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/name_marsy"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_below="@+id/choice_place"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="130dp"
        android:background="@drawable/shapetext"
        android:drawableLeft="@drawable/ic_expand_more_black_24dp"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:text="@string/namemarsy"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/type_boot"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/search"
        android:layout_alignRight="@+id/search"
        android:layout_alignTop="@+id/name_marsy"
        android:layout_below="@+id/choice_place"
        android:background="@drawable/shapetext"
        android:gravity="center"
        android:paddingBottom="10dp"
        android:paddingTop="10dp"
        android:text="@string/type"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

</RelativeLayout>